--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-lazy-load-image-component": "^1.6.2",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
